# solana-trader

./: .gitignore  README.md  wallet0.json
client/: Cargo.toml  program_wallet.json
client/src/: client.rs  lib.rs  main.rs  utils.rs
client/tests/: init_trade.rs  lib.rs  make_trade.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instructions.rs  processor.rs  state.rs
