[package]
name = "trader-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.9.9"
solana-client = "1.9.9"
solana-program = "1.4.4"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
yaml-rust = "0.4"
thiserror = "1"
home = "0.5.3"
borsh = "0.9.1"

[dependencies.trader]
path = "../program"
